--- a/NOVOPROJETO-main/PROJETO 2 TRI/style.css
+++ b/NOVOPROJETO-main/PROJETO 2 TRI/style.css
@@ -27,3 +27,18 @@ body {
 h1{
     color: var(--cor-destaque);   
 }
+
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;   
+    transition: background-color 0.3s;
+}
+
+button:houver{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+
+}
